objects/Registration_Card__c.object
<CustomObject>
    <fields>
        <fullName>Home_To_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have a home to sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Type__c</fullName>
        <label>What type of home are you looking for?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Two-storey</fullName>
                </value>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_many_bedrooms_do_you_need__c</fullName>
        <label>Home many bedrooms do you need?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_In_Timeframe__c</fullName>
        <label>When are you planning to move?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6+ months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Registration Cards</relationshipLabel>
        <relationshipName>Registration_Cards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Registration Card</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Denver_Registration_Card</fullName>
        <active>true</active>
        <label>Denver Registration Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toronto_Registration_Card</fullName>
        <active>true</active>
        <label>Toronto Registration Card</label>
    </recordTypes>
</CustomObject>